# design-patterns

./: CMakeLists.txt  CMakeSettings.json  GenerateAllCacheFolders.bat  GenerateCache.bat  Project.sln  Project.vcxproj  Project.vcxproj.filters  README.md  build_vs.bat  cmake_builder.bat  conanfile.py  configure_vs.bat  test.cpp
behavioral/: CMakeLists.txt
behavioral/observer/: CMakeLists.txt
behavioral/observer/include/observer/: observer.h
behavioral/observer/src/: observer.cpp
behavioral/observer/src/cli/: main.cpp
creational/: CMakeLists.txt
creational/abstract-factory/: CMakeLists.txt
creational/abstract-factory/include/ui/: ui.h
creational/abstract-factory/include/ui/interface/: ui-interface.h
creational/abstract-factory/src/: ui.cpp
creational/abstract-factory/src/cli/: client.cpp  client.h  main.cpp
creational/builder/: CMakeLists.txt
creational/builder/include/computer/: computer.h
creational/builder/include/computer/interface/: computer-builder-interface.h
creational/builder/src/: computer.cpp
creational/builder/src/cli/: main.cpp
creational/object-pool/: CMakeLists.txt
creational/object-pool/include/object-pool/: object-pool.h
creational/object-pool/src/: object-pool.cpp
creational/object-pool/src/cli/: main.cpp
creational/singleton/: CMakeLists.txt
creational/singleton/include/logger/: logger.h
creational/singleton/src/: logger.cpp
creational/singleton/src/cli/: main.cpp
structural/: CMakeLists.txt
structural/adapter/: CMakeLists.txt
structural/adapter/include/adapter/: adapter.h
structural/adapter/src/: adapter.cpp
structural/adapter/src/cli/: main.cpp
